--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -40,23 +40,11 @@
     <meta name="description" content="{{ page_description | escape }}" />
     {%- endif -%} {% include 'social-meta-tags' %}
 
-    {{
-      'theme.scss.css' | asset_url | stylesheet_tag
-    }}
+    {{ 'theme.css' | asset_url | stylesheet_tag }}
 
     <link href="https://earthbar.s3-ap-southeast-2.amazonaws.com/earthbar-utilities.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-    {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js"></script> {% endcomment %}
-    {% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script> {% endcomment %}
-    {% comment %} <script src="https://cdn.jsdelivr.net/npm/airtable@0.8.1/lib/airtable.min.js"></script> {% endcomment %}
-    {% comment %} <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script> {% endcomment %}
-    {% comment %} <script src="{{ 'airtable.browser.js' | asset_url }}" async="async"></script> {% endcomment %}
-    {% comment %} <script src="{{ 'bundle.js' | asset_url }}" async="async"></script> {% endcomment %}
-    <!--<script src="https://unpkg.com/popper.js@1"></script> -->
-    <!-- <script src="https://unpkg.com/tippy.js@5"></script> -->
-    {% comment %} <script data-main="scripts/main" src="{{ 'require.js' | asset_url }}" async="async"></script> {% endcomment %}
-
-
+   
     <script>
       var theme = {
         strings: {
