--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -44,6 +44,7 @@
 
     <link href="https://earthbar.s3-ap-southeast-2.amazonaws.com/earthbar-utilities.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+    <script src="https://unpkg.com/vue@3.1.5" defer></script>
    
     <script>
       var theme = {
@@ -155,6 +156,8 @@
       
       {% section 'footer' %}
 
+      <div id="test"></div>
+
     </div>
 
     <ul hidden>
@@ -164,8 +167,7 @@
     {% include 'ajaxify-cart' %}
    {% include 'smile-initializer' %}
 
-
-{% include 'swymSnippet' %}
+    {{ 'app.js' | asset_url | script_tag }}
 
 </body>
 </html>
