--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -44,7 +44,7 @@
 
     <link href="https://earthbar.s3-ap-southeast-2.amazonaws.com/earthbar-utilities.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
-    <script src="https://unpkg.com/vue@3.1.5" defer></script>
+    <script src="https://unpkg.com/vue@3.1.5" ></script>
    
     <script>
       var theme = {
@@ -156,7 +156,7 @@
       
       {% section 'footer' %}
 
-      <div id="test"></div>
+      
 
     </div>
 
