--- a/sections/cart-template.liquid
+++ b/sections/cart-template.liquid
@@ -191,7 +191,7 @@
       <div class="cookie-message">
         <p>{{ 'cart.general.cookies_required' | t }}</p>
       </div>
-      <a href="/" class="btn btn--has-icon-after cart__continue-btn">{{ 'general.404.link' | t }}{% include 'icon-arrow-right' %}</a>
+      <a href="/" class="btn btn--has-icon-after cart__continue-btn">{{ 'general.404.link' | t }}{% render 'icon-arrow-right' %}</a>
     </div>
   {% endif %}
 </div>
