--- a/layout/gift_card.liquid
+++ b/layout/gift_card.liquid
@@ -18,8 +18,8 @@
 
   <meta name="description" content="{{ 'gift_cards.issued.subtext' | t }}">
 
-  {{ 'theme.scss.css' | asset_url | stylesheet_tag }}
-  {{ 'gift-card.scss.css' | asset_url | stylesheet_tag }}
+  {{ 'theme.css' | asset_url | stylesheet_tag }}
+  {{ 'gift-card.css' | asset_url | stylesheet_tag }}
 
   <!--[if (gt IE 9)|!(IE)]><!--><script src="{{ 'vendor/qrcode.js' | shopify_asset_url }}" defer="defer"></script><!--<![endif]-->
   <!--[if lte IE 9]><script src="{{ 'vendor/qrcode.js' | shopify_asset_url }}"></script><![endif]-->
