--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -100,7 +100,7 @@
                         {% if section.blocks.size == 1 %} site-footer__single-block--centered{% endif %}">
                 {%- assign formId = 'ContactFooter' -%}
                 {% form 'customer', id: formId, novalidate: 'novalidate' %}
-                  {% include 'form-status', formId %}
+                  {% render 'form-status', formId %}
                   <label for="{{ formId }}-email" class="visually-hidden">{{ 'general.newsletter_form.newsletter_email' | t }}</label>
                   <div class="site-footer__newsletter{% if form.errors %} newsletter__input-group--error{% endif %}">
                     <input type="hidden" name="contact[tags]" value="newsletter">
@@ -118,7 +118,7 @@
                         <span class="newsletter__submit-text--large">{{ 'general.newsletter_form.submit' | t }}</span>
                       </button>
                     </span>
-                    <span id="{{ formId }}-email-error" class="input-error-message">{% include 'icon-error' %} {{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}.</span>
+                    <span id="{{ formId }}-email-error" class="input-error-message">{% render 'icon-error' %} {{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}.</span>
                   </div>
                 {% endform %}
               </div>
@@ -164,7 +164,7 @@
             {%- if settings.social_facebook_link != blank -%}
               <li>
                 <a class="social-icons__link" href="{{ settings.social_facebook_link | escape }}" aria-describedby="a11y-external-message">
-                  {%- include 'icon-facebook' -%}
+                  {%- render 'icon-facebook' -%}
                   <span class="icon__fallback-text">Facebook</span>
                 </a>
               </li>
@@ -172,7 +172,7 @@
             {%- if settings.social_twitter_link != blank -%}
               <li>
                 <a class="social-icons__link" href="{{ settings.social_twitter_link | escape }}" aria-describedby="a11y-external-message">
-                  {%- include 'icon-twitter' -%}
+                  {%- render 'icon-twitter' -%}
                   <span class="icon__fallback-text">Twitter</span>
                 </a>
               </li>
@@ -180,7 +180,7 @@
             {%- if settings.social_pinterest_link != blank -%}
               <li>
                 <a class="social-icons__link" href="{{ settings.social_pinterest_link | escape }}" aria-describedby="a11y-external-message">
-                  {%- include 'icon-pinterest' -%}
+                  {%- render 'icon-pinterest' -%}
                   <span class="icon__fallback-text">Pinterest</span>
                 </a>
               </li>
@@ -188,7 +188,7 @@
             {%- if settings.social_instagram_link != blank -%}
               <li>
                 <a class="social-icons__link" href="{{ settings.social_instagram_link | escape }}" aria-describedby="a11y-external-message">
-                  {%- include 'icon-instagram' -%}
+                  {%- render 'icon-instagram' -%}
                   <span class="icon__fallback-text">Instagram</span>
                 </a>
               </li>
@@ -196,7 +196,7 @@
             {%- if settings.social_tumblr_link != blank -%}
               <li>
                 <a class="social-icons__link" href="{{ settings.social_tumblr_link | escape }}" aria-describedby="a11y-external-message">
-                  {%- include 'icon-tumblr' -%}
+                  {%- render 'icon-tumblr' -%}
                   <span class="icon__fallback-text">Tumblr</span>
                 </a>
               </li>
@@ -204,7 +204,7 @@
             {%- if settings.social_snapchat_link != blank -%}
               <li>
                 <a class="social-icons__link" href="{{ settings.social_snapchat_link | escape }}" aria-describedby="a11y-external-message">
-                  {%- include 'icon-snapchat' -%}
+                  {%- render 'icon-snapchat' -%}
                   <span class="icon__fallback-text">Snapchat</span>
                 </a>
               </li>
@@ -212,7 +212,7 @@
             {%- if settings.social_youtube_link != blank -%}
               <li>
                 <a class="social-icons__link" href="{{ settings.social_youtube_link | escape }}" aria-describedby="a11y-external-message">
-                  {%- include 'icon-youtube' -%}
+                  {%- render 'icon-youtube' -%}
                   <span class="icon__fallback-text">YouTube</span>
                 </a>
               </li>
@@ -220,7 +220,7 @@
             {%- if settings.social_vimeo_link != blank -%}
               <li>
                 <a class="social-icons__link" href="{{ settings.social_vimeo_link | escape }}" aria-describedby="a11y-external-message">
-                  {%- include 'icon-vimeo' -%}
+                  {%- render 'icon-vimeo' -%}
                   <span class="icon__fallback-text">Vimeo</span>
                 </a>
               </li>
@@ -228,7 +228,7 @@
             {%- if template.name == 'blog' or template.name == 'article' -%}
               <li>
                 <a class="social-icons__link" href="{{ shop.url }}{{ blog.url }}.atom">
-                  {%- include 'icon-rss' -%}
+                  {%- render 'icon-rss' -%}
                   <span class="icon__fallback-text">RSS</span>
                 </a>
               </li>
