--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -57,7 +57,7 @@
       {% if section.settings.align_logo == 'center' %}
         <div class="grid__item small--hide medium-up--one-third">
           <div class="site-header__search">
-            {% include 'search-form' %}
+            {% render 'search-form' %}
           </div>
         </div>
       {% endif %}
@@ -110,7 +110,7 @@
 
       {% if section.settings.align_logo == 'left' %}
         <nav class="grid__item medium-up--one-half small--hide" id="AccessibleNav" role="navigation">
-          {% include 'site-nav' %}
+          {% render 'site-nav' %}
         </nav>
       {% endif %}
 
@@ -118,24 +118,24 @@
         <div class="site-header__icons-wrapper">
           {% if section.settings.align_logo == 'left' %}
             <div class="site-header__search site-header__icon">
-              {% include 'search-form' %}
+              {% render 'search-form' %}
             </div>
           {% endif %}
 
           <button type="button" class="btn--link site-header__icon site-header__search-toggle js-drawer-open-top">
-            {% include 'icon-search' %}
+            {% render 'icon-search' %}
             <span class="icon__fallback-text">{{ 'layout.navigation.search' | t }}</span>
           </button>
 
           {% if shop.customer_accounts_enabled %}
             {% if customer %}
               <a href="/account" class="site-header__icon site-header__account">
-                {% include 'icon-login' %}
+                {% render 'icon-login' %}
                 <span class="icon__fallback-text">{{ 'layout.customer.account' | t }}</span>
               </a>
             {% else %}
               <a href="/account/login" class="site-header__icon site-header__account">
-                {% include 'icon-login' %}
+                {% render 'icon-login' %}
                 <span class="icon__fallback-text">{{ 'layout.customer.log_in' | t }}</span>
               </a>
             {% endif %}
@@ -147,7 +147,7 @@
           </a> {% endcomment %}
 
           <a href="/cart" class="site-header__icon site-header__cart">
-            {% include 'icon-cart' %}
+            {% render 'icon-cart' %}
             <span class="icon__fallback-text">{{ 'layout.cart.title' | t }}</span>
             {% if cart.item_count > -1 %}
               <div id="CartCount" class="site-header__cart-count">
@@ -166,7 +166,7 @@
                     <option value="{{currency.iso_code}}"{% if currency == cart.currency %} selected="true"{% endif %}>{{currency.iso_code}}</option>
                   {% endfor %}
                 </select>
-                {% include 'icon-chevron-down' %}
+                {% render 'icon-chevron-down' %}
               </div>
             {% endform %}
           {% endif %}
@@ -177,8 +177,8 @@
         </div>
         <div class="pt-2"><button type="button" class="btn--link site-header__icon site-header__menu js-mobile-nav-toggle mobile-nav--open" aria-controls="navigation"  aria-expanded="false" aria-label="{{ 'layout.navigation.menu' | t }}">
           <span class="pr-2">Menu</span>
-          {% include 'icon-hamburger' %}
-          {% include 'icon-close' %}
+          {% render 'icon-hamburger' %}
+          {% render 'icon-close' %}
         </button>
         </div>
       </div>
@@ -196,7 +196,7 @@
               <button type="button" class="btn--link js-toggle-submenu mobile-nav__link{% if link.child_active %} mobile-nav__link--active{% endif %}" data-target="{{ child_list_handle }}" data-level="1" aria-expanded="false">
                 <span class="mobile-nav__label">{{ link.title }}</span>
                 <div class="mobile-nav__icon">
-                  {% include 'icon-chevron-right' %}
+                  {% render 'icon-chevron-right' %}
                 </div>
               </button>
               <ul class="mobile-nav__dropdown" data-parent="{{ child_list_handle }}" data-level="2">
@@ -207,7 +207,7 @@
                   <div class="mobile-nav__table">
                     <div class="mobile-nav__table-cell mobile-nav__return">
                       <button class="btn--link js-toggle-submenu mobile-nav__return-btn" type="button" aria-expanded="true" aria-label="{{ link.title }}">
-                        {% include 'icon-chevron-left' %}
+                        {% render 'icon-chevron-left' %}
                       </button>
                     </div>
                     <span class="mobile-nav__sublist-link mobile-nav__sublist-header mobile-nav__sublist-header--main-nav-parent">
@@ -223,7 +223,7 @@
                       <button type="button" class="btn--link js-toggle-submenu mobile-nav__link mobile-nav__sublist-link" data-target="{{ grandchild_list_handle }}" aria-expanded="false">
                         <span class="mobile-nav__label">{{ childlink.title }}</span>
                         <div class="mobile-nav__icon">
-                          {% include 'icon-chevron-right' %}
+                          {% render 'icon-chevron-right' %}
                         </div>
                       </button>
                       <ul class="mobile-nav__dropdown" data-parent="{{ grandchild_list_handle }}" data-level="3">
@@ -234,7 +234,7 @@
                           <div class="mobile-nav__table">
                             <div class="mobile-nav__table-cell mobile-nav__return">
                               <button type="button" class="btn--link js-toggle-submenu mobile-nav__return-btn" data-target="{{ child_list_handle }}" aria-expanded="true" aria-label="{{ childlink.title }}">
-                                {% include 'icon-chevron-left' %}
+                                {% render 'icon-chevron-left' %}
                               </button>
                             </div>
                             <a href="{{ childlink.url }}" class="mobile-nav__sublist-link mobile-nav__sublist-header">
@@ -275,7 +275,7 @@
                     <option value="{{currency.iso_code}}"{% if currency == cart.currency %} selected="true"{% endif %}>{{currency.iso_code}}</option>
                   {% endfor %}
                 </select>
-                {% include 'icon-chevron-down' %}
+                {% render 'icon-chevron-down' %}
               </div>
             {% endform %}
           </li>
@@ -286,7 +286,7 @@
 
   {% if section.settings.align_logo == 'center' %}
   <nav class="small--hide border-bottom" id="AccessibleNav" role="navigation">
-    {% include 'site-nav', nav_alignment: 'site-nav--centered' %}
+    {% render 'site-nav', nav_alignment: 'site-nav--centered' %}
   </nav>
   {% endif %}
 </div>
