--- a/snippets/site-nav.liquid
+++ b/snippets/site-nav.liquid
@@ -15,7 +15,7 @@
     {% if link.links != blank %}
       <li class="site-nav--has-dropdown{% if three_level_nav %} site-nav--has-centered-dropdown{% endif %}{% if link.active %} site-nav--active{% endif %}">
         <button class="site-nav__link site-nav__link--main site-nav__link--button{% if link.child_active %} site-nav__link--active{% endif %} link-{{ link.handle }}" type="button" aria-haspopup="true" aria-expanded="false" aria-controls="SiteNavLabel-{{ child_list_handle }}">
-          <span class="site-nav__label font-heading">{{ link.title }}</span>{% include 'icon-chevron-down' %}
+          <span class="site-nav__label font-heading">{{ link.title }}</span>{% render 'icon-chevron-down' %}
         </button>
 
         <div class="site-nav__dropdown{% if three_level_nav %} site-nav__dropdown--centered{% endif %}" id="SiteNavLabel-{{ child_list_handle }}">
