--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -7157,6 +7157,11 @@ $toolbar-height-small: 46px;
   line-height: 1.2;
 }
 
+.feature-icon {
+  max-width: 170px;
+}
+
+
 .feature-icon-image {
   height: 50px;
   margin-bottom: 15px;
